# DefQuery

./: .gitignore  CMakeLists.txt  DefQuery.sln  README.md
.github/workflows/: cicd.yaml
DefQuery/: CMakeLists.txt  aggregate.h  contains.h  count.h  decay.h  enumerator.h  first.h  from.h  generator.h  groupby.h  join.h  list.h  orderby.h  range.h  reverse.h  select.h  selectmany.h  share.h  stlrange.h  store.h  take.h  vector.h  where.h
DefQueryTest/: AggregateTest.cpp  AllTest.cpp  AnyTest.cpp  CMakeLists.txt  ContainsTest.cpp  CountTest.cpp  DecayTest.cpp  DefQueryTest.vcxproj  FirstTest.cpp  FromTest.cpp  GeneratorTest.cpp  GroupByTest.cpp  JoinTest.cpp  LifecycleTest.cpp  ListTest.cpp  OrderByTest.cpp  RangeTest.cpp  RegexpTest.cpp  ReverseTest.cpp  SelectManyTest.cpp  SelectTest.cpp  ShareTest.cpp  StlRangeTest.cpp  StoreTest.cpp  TakeTest.cpp  TakeWhileTest.cpp  VectorTest.cpp  WhereTest.cpp  test.cpp
include/DefQuery/: aggregate.h  all.h  any.h  contains.h  count.h  decay.h  enumerator.h  first.h  from.h  generator.h  groupby.h  join.h  list.h  orderby.h  range.h  reverse.h  select copy.h  select.h  selectmany.h  stlrange.h  store.h  take.h  takewhile.h  vector.h  where.h
libgtest/: CMakeLists.txt
test/: AggregateTest.cpp  AllTest.cpp  AnyTest.cpp  ContainsTest.cpp  CountTest.cpp  DecayTest.cpp  FirstTest.cpp  FromTest.cpp  GeneratorTest.cpp  GroupByTest.cpp  JoinTest.cpp  LifecycleTest.cpp  ListTest.cpp  OrderByTest.cpp  RangeTest.cpp  RegexpTest.cpp  ReverseTest.cpp  SelectManyTest.cpp  SelectTest.cpp  StlRangeTest.cpp  StoreTest.cpp  TakeTest.cpp  TakeWhileTest.cpp  VectorTest.cpp  WhereTest.cpp
